syntax = "proto3";

option csharp_namespace = "Library.GrpcGreeterService";

package MyLibrary.Greet;

// 类库Greeter服务
service LibraryGreeterService {
	// Sends a greeting
	rpc SayHello (LibraryHelloRequest) returns (LibraryHelloReply);
}

// 类库Hello请求
message LibraryHelloRequest {
	//用户名
	string name = 1;
}

// 类库Hello请求响应
message LibraryHelloReply {
	//消息
	string message = 1;
}
